Fixed wrapping issues with new tag Reverted image css to default bolt css

--- a/src/widgets/game/list/itemV2/components/details/style.scss
+++ b/src/widgets/game/list/itemV2/components/details/style.scss
@@ -32,13 +32,15 @@
     .display-name-container {
       background: none;
       flex: none;
+      flex-wrap: wrap;
+      justify-content: center;
       margin-bottom: 0.5rem;
       padding: 0;
       transition: margin 500ms ease;
     }
 
     .display-name {
-      @include responsive-type(16, 20);
+      @include responsive-type(14, 16);
 
       color: $black;
       font-weight: bold;
