--- a/src/widgets/game/list/itemV2/container.scss
+++ b/src/widgets/game/list/itemV2/container.scss
@@ -52,7 +52,7 @@ game-list {
 
     @media ($small) {
       grid-gap: 3rem;
-      grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(33rem, 1fr));
     }
 
     @media ($medium) {
@@ -60,7 +60,7 @@ game-list {
     }
 
     @media ($large) {
-      grid-template-columns: repeat(auto-fill, minmax(33rem, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
     }
   }
 }
